# ai4city

./: .env.example  .gitignore  AI4Cities夏令营学员任务书0709.docx  README.md  agent_rag_memory_demo.py  agent_rag_memory_demo_v2.py  app_paths.py  build_knowledge_base.py  build_knowledge_base_v2.py  config.py  docx_and_stitch_summary.md  environment.yml  filled_metrics.xlsx  local_embeddings.py  morph_metrics_extractor.py  prompt.docx  pyproject.toml  requirements.txt  reset_memory.ps1  run_demo.ps1  run_demo.py  task.md  test_worldlabs_live.py  参数说明文档.md  夏令营引入领域专家的人机多智能体协同工作营.docx  工作营完整技术 Pipeline20260615.docx  指标定义及计算方式.xlsx  第二日技术方案v2.docx  高密度情境下微空间优化-AI4Cities工作营.docx  高密度情境下微空间优化参数和应用场景.docx  高密度情境下微空间优化科学问题阐述.docx
_extracted_text/: 2026 夏令营引入领域专家的人机多智能体协同工作营.txt  AI4Cities夏令营学员任务书0709.txt  day2_tech_v2.txt  metrics_definition.txt  metrics_extract_route.txt  工作营完整技术 Pipeline20260615.txt  高密度情境下微空间优化-AI4Cities工作营.txt  高密度情境下微空间优化参数和应用场景.txt  高密度情境下微空间优化科学问题阐述.txt
agents/: __init__.py  cartographer_agent.py  learning_agent.py  memory_agent.py  prompt_expert_agent.py  prompt_templates.py  quality_checker_agent.py  reasonableness.py  scene_understanding_agent.py  seedream_agent.py  translator_agent.py  worldlabs_agent.py
app/: api_server.py  data_catalog.py  generation_backend.py  gradio_app.py  metrics_table_loader.py  post_edit_metrics.py  session_store.py  ui_theme.py
configs/: default.yaml
docs/: TASK2_3_FRAMEWORK.md  UNIFIED_PIPELINE.md
examples/: bluegreen_01_03_mock_data.json  run_bluegreen_mock.py  task2_3_demo.py
knowledge_base/: __init__.py  kb_store.py  (+4 more)
(+57 files in other folders)
