[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4city-mas"
version = "0.1.0"
description = "Human-in-the-loop multi-agent backbone for evidence-based urban micro-space optimization."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "langgraph>=0.3,<0.4",
  "pydantic>=2.10,<3",
  "PyYAML>=6,<7",
  "rich>=13,<16",
  "typer>=0.16,<1",
]

[project.scripts]
ai4city = "ai4city_mas.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
